# turgnamh

./: pyproject.toml
src/turgnamh/: __init__.py  settings.py
src/turgnamh/core/: experiment.py
src/turgnamh/utils/: printing.py
